AF-593: Decouple DMO from Drools (#1133)